Update installation instructions and directory name for GitHub Pages hosting

--- a/src/docs/bamboo.mdx
+++ b/src/docs/bamboo.mdx
@@ -3,13 +3,11 @@ import { Meta, Markdown } from '@storybook/blocks';
 
 <Meta title="Bamboo" />
 
-# Bamboo
-
 Lightweight and flexible (hence the name) UI Library built with [Vite](https://vitejs.dev/) and [Vue 3](https://vuejs.org/). The documentation is created with [Storybook](https://storybook.js.org/).
 
 ### Project setup
 
-As a prerequisite, you need to have node and npm installed on your machine. You can download and install them from [here](https://nodejs.org/en/).
+You need to have node and npm installed on your machine as a prerequisite. You can download and install them from [here](https://nodejs.org/en/).
 
 ### Install dependencies
 
@@ -48,8 +46,8 @@ To build the Storybook documentation for production, run the following command:
 npm run build-storybook
 ```
 
-This will build the Storybook documentation and generate the static files in the `docs` folder.
-The directory is used by DstHub Pages to host the documentation.
+This will build the Storybook documentation and generate the static files in the `static` folder.
+GitHub Pages uses the directory to host the documentation.
 
 ### Run your unit tests
 
