Add BoButtonGroup component and related files

--- a/src/docs/license/feather_license.mdx
+++ b/src/docs/license/feather_license.mdx
@@ -1,6 +1,6 @@
 import License from '../../../vendor/feather_license.md?raw';
 import { Meta, Markdown } from '@storybook/blocks';
 
-<Meta title="License/Feather" />
+<Meta title="License/Feather icons" />
 
 <Markdown>{License}</Markdown>
