--- a/src/docs/bamboo.mdx
+++ b/src/docs/bamboo.mdx
@@ -1,5 +1,4 @@
-import Readme from '../../README.md?raw';
-import { Meta, Markdown } from '@storybook/blocks';
+import { Meta } from '@storybook/blocks';
 
 <Meta title="Bamboo" />
 
