Update branding URL in bamboo_theme.ts

--- a/src/docs/bamboo.mdx
+++ b/src/docs/bamboo.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/blocks';
 
-<Meta title="Bamboo" />
+<Meta title="1. Bamboo" />
 
 Lightweight and flexible (hence the name) UI Library built with [Vite](https://vitejs.dev/) and [Vue 3](https://vuejs.org/). The documentation is created with [Storybook](https://storybook.js.org/).
 
