--- a/src/docs/colors.mdx
+++ b/src/docs/colors.mdx
@@ -1,6 +1,6 @@
 import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
 
-<Meta title="Styling/Colors" />
+<Meta title="2. Colors" />
 
 <ColorPalette>
 	<ColorItem
