--- a/src/docs/bamboo_license.mdx
+++ b/src/docs/bamboo_license.mdx
@@ -1,6 +1,6 @@
-import License from '../../../LICENSE?raw';
+import License from '../../LICENSE?raw';
 import { Meta, Markdown } from '@storybook/blocks';
 
-<Meta title="License/Bamboo" />
+<Meta title="3. License" />
 
 <Markdown>{License}</Markdown>
