--- a/src/components/bo_button/__stories__/bo_button.mdx
+++ b/src/components/bo_button/__stories__/bo_button.mdx
@@ -2,30 +2,85 @@ import { Canvas, Meta, Controls } from '@storybook/blocks';
 import * as BoButtonStories from './bo_button.stories';
 
 <Meta
-	title="Button/bo-button"
+	title="Components/bo-button"
 	component={BoButtonStories.BoButton}
 />
 
 # bo-button
 
-The `bo-button` component is a button component that can be used in various ways.
+A button is a control that allows the user to perform an action. The `bo-button` component is a button component that can be used in various ways.
 
 ## Props
 
-- `label` - The label of the button
-- `variant` - The variant of the button
-- `type` - The type of the button
-- `disabled` - Whether the button is disabled
-- `size` - The size of the button
-- `icons` - The icons to be displayed
+- `label` - The label of the button (required)
+- `variant` - The variant of the button (optional) (default: `primary`)
+- `type` - The type of the button (optional) (default: `default`)
+- `disabled` - Whether the button is disabled (optional) (default: `false`)
+- `size` - The size of the button (optional) (default: `default`)
+- `prefixIcon` - The icon to be displayed before the label (optional)
+- `suffixIcon` - The icon to be displayed after the label (optional)
 
-## Examples
+<Canvas of={BoButtonStories.Example} />
+<Controls of={BoButtonStories.Example} />
 
-<Canvas>
-	<Controls>
-		<BoButtonStories.Example />
-		<BoButtonStories.Disabled />
-		<BoButtonStories.Sizes />
-		<BoButtonStories.Variants />
-	</Controls>
-</Canvas>
+## Button variants
+
+To change the color of the component, you can use the predifened `BoButtonVariant` enum. The `BoButtonVariant` enum includes the following variants:
+
+- `primary`
+- `secondary`
+- `danger`
+- `warning`
+- `success`
+- `dark`
+- `purple`
+- `teal`
+
+<Canvas of={BoButtonStories.Variants} />
+
+## Button types
+
+To differentiate between the different types of buttons, the `bo-button` component also has a `type` prop that you can use. The `type` prop can take the values
+of the `BoButtonType` enum, which includes the following types:
+
+- `default`
+- `pill`
+- `outline`
+
+<Canvas of={BoButtonStories.Types} />
+
+## Button sizes
+
+As with any other component in the project the `bo-button` component also uses the `BoSize` enum to define the size of the button. The `BoSize` enum includes the following sizes:
+
+- `extra_small`
+- `small`
+- `default`
+- `large`
+- `extra_large`
+
+<Canvas of={BoButtonStories.Sizes} />
+
+## Disabled
+
+The `disabled` prop can be used to disable the button. When the button is disabled, it will not respond to user interactions and will appear in a disabled state.
+
+<Canvas of={BoButtonStories.Disabled} />
+
+## With prefix icon
+
+The `prefixIcon` prop can be used to display an icon before the label of the button. The `prefixIcon` prop should be a string that represents the name of the icon you want to display.
+
+<Canvas of={BoButtonStories.WithPrefixIcon} />
+
+## With suffix icon
+
+The `suffixIcon` prop can be used to display an icon after the label of the button. The `suffixIcon` prop should be a string that represents the name of the icon you want to display.
+
+<Canvas of={BoButtonStories.Disabled} />
+
+## With prefix and suffix icon
+
+The `prefixIcon` and `suffixIcon` props can be used together to display an icon before and after the label of the button. The `prefixIcon` prop should be a string that represents the name of the icon you want to display, and the `suffixIcon` prop should be a string that represents the name of the icon you want to display.
+
+<Canvas of={BoButtonStories.WithPrefixAndSuffixIcon} />
