component refactor and unified sizes

--- a/src/components/bo_icon/__stories__/bo_icon.mdx
+++ b/src/components/bo_icon/__stories__/bo_icon.mdx
@@ -40,3 +40,7 @@ The `color` prop can be used to change the color of the icon. The `color` prop s
 The `color` prop can take the values of the `BoColor` enum or any other color value that can be used until it's in valid `hex` format.
 
 <Canvas of={BoIconStories.Colors} />
+
+## List of all icons
+
+<Canvas of={BoIconStories.AllIcons} />
