--- a/src/components/bo_icon/__stories__/bo_icon.mdx
+++ b/src/components/bo_icon/__stories__/bo_icon.mdx
@@ -14,8 +14,11 @@ This library uses the [Feather Icons](https://feathericons.com/) collection of i
 ## Props
 
 - `icon` - The name of the icon (required)
-- `size` - The size of the icon (optional) (default: `default`)
+  - an icon name from the `Icon` enum
+- `size` - The size of the icon (optional)
+  - default: `BoSize.default`
 - `color` - The color of the icon in `hex` format (optional)
+  - default: `'currentColor'`
 
 ## Examples
 
