--- a/src/components/bo_spinner/__stories__/bo_spinner.mdx
+++ b/src/components/bo_spinner/__stories__/bo_spinner.mdx
@@ -12,9 +12,14 @@ A spinner is a graphical representation of an object or action that is being pro
 
 ## Props
 
-- `size` - The size of the spinner (optional) (default: `default`)
-- `variant` - The variant of the spinner (optional) (default: `primary`)
+- `size` - The size of the spinner (optional)
+  - default: `BoSize.default`
+- `variant` - The variant of the spinner (optional)
+  - default: `BoSpinnerVariant.primary`
 - `loaderText` - The text to be displayed in the loader (optional)
+  - default: `''`
+
+## Examples
 
 <Canvas of={BoSpinnerStories.Example} />
 <Controls of={BoSpinnerStories.Example} />
