chore: doc update

--- a/src/components/bo_badge/__stories__/bo_badge.mdx
+++ b/src/components/bo_badge/__stories__/bo_badge.mdx
@@ -8,7 +8,13 @@ import * as BoBadgeStories from './bo_badge.stories';
 
 # bo-badge
 
-A badge is a small label that is attached to an object or action. The `bo-badge` component is a badge component that can be used in various ways.
+A badge is a small label that is attached to an object or action.
+
+## Basic usage
+
+```html
+<bo-badge :label="Hello World!" />
+```
 
 ## Props
 
