--- a/src/components/bo_button/__stories__/bo_button.mdx
+++ b/src/components/bo_button/__stories__/bo_button.mdx
@@ -8,7 +8,13 @@ import * as BoButtonStories from './bo_button.stories';
 
 # bo-button
 
-A button is a control that allows the user to perform an action. The `bo-button` component is a button component that can be used in various ways.
+A button is a control that allows the user to perform an action.
+
+## Basic usage
+
+```html
+<bo-button :label="Hello World!" />
+```
 
 ## Props
 
