--- a/src/components/bo_icon_button/__storybook__/bo_icon_button.mdx
+++ b/src/components/bo_icon_button/__storybook__/bo_icon_button.mdx
@@ -8,8 +8,13 @@ import * as BoIconButtonStories from './bo_icon_button.stories';
 
 # bo-icon-button
 
-A button is a control that allows the user to perform an action. The `bo-icon-button` component is a button component that contains only an icon.
-This can be used in various ways throughout the project.
+An icon only button is a control that allows the user to perform an action.
+
+## Basic usage
+
+```html
+<bo-icon-button :icon="Icon.alert_circle" />
+```
 
 ## Props
 
