--- a/src/components/bo_spinner/__stories__/bo_spinner.mdx
+++ b/src/components/bo_spinner/__stories__/bo_spinner.mdx
@@ -8,7 +8,13 @@ import * as BoSpinnerStories from './bo_spinner.stories';
 
 # bo-spinner
 
-A spinner is a graphical representation of an object or action that is being processed. The `bo-spinner` component is a spinner component that can be used in various ways.
+A spinner is a graphical representation of an object or action that is being processed.
+
+## Basic usage
+
+```html
+<bo-spinner />
+```
 
 ## Props
 
