--- a/src/components/bo_text/__stories__/bo_text.mdx
+++ b/src/components/bo_text/__stories__/bo_text.mdx
@@ -8,7 +8,13 @@ import * as BoTextStories from './bo_text.stories';
 
 # bo-text
 
-A text is a small piece of text that is used to display information. The `bo-text` component is a text component that can be used in various ways.
+A label is a small piece of text that is used to display information.
+
+## Basic usage
+
+```html
+<bo-text :text="Hello World!" />
+```
 
 ## Props
 
