major style and logic refactor

--- a/src/components/bo_badge/__stories__/bo_badge.mdx
+++ b/src/components/bo_badge/__stories__/bo_badge.mdx
@@ -27,7 +27,7 @@ A badge is a small label that is attached to an object or action.
 - `shape` - The shape of the badge (optional)
   - default: `BoBadgeShape.default`
 - `variant` - The variant of the badge (optional)
-  - default: `BoBadgeVariant.primary`
+  - default: `BoVariant.primary`
 - `prefixIcon` - The icon to be displayed before the label (optional)
   - default: `Icon.none`
 - `suffixIcon` - The icon to be displayed after the label (optional)
@@ -48,7 +48,7 @@ The `size` prop can be used to change the size of the badge. The `size` prop sho
 
 ## Variants
 
-To change the color of the component, you can use the predifened `BoBadgeVariant` enum. The `BoBadgeVariant` enum includes the following variants:
+To change the color of the component, you can use the predifened `BoVariant` enum. The `BoVariant` enum includes the following variants:
 
 - `primary`
 - `secondary`
