--- a/src/components/bo_button/__stories__/bo_button.mdx
+++ b/src/components/bo_button/__stories__/bo_button.mdx
@@ -20,7 +20,7 @@ A button is a control that allows the user to perform an action.
 
 - `label` - The label of the button (required)
 - `variant` - The variant of the button (optional)
-  - default: `BoButtonVariant.primary`
+  - default: `BoVariant.primary`
 - `type` - The type of the button (optional)
   - default: `BoButtonType.default`
 - `disabled` - Whether the button is disabled (optional)
@@ -39,7 +39,7 @@ A button is a control that allows the user to perform an action.
 
 ## Button variants
 
-To change the color of the component, you can use the predifened `BoButtonVariant` enum. The `BoButtonVariant` enum includes the following variants:
+To change the color of the component, you can use the predifened `BoVariant` enum. The `BoVariant` enum includes the following variants:
 
 - `primary`
 - `secondary`
@@ -47,6 +47,7 @@ To change the color of the component, you can use the predifened `BoButtonVarian
 - `warning`
 - `success`
 - `dark`
+- `light`
 - `purple`
 - `teal`
 
@@ -60,6 +61,7 @@ of the `BoButtonType` enum, which includes the following types:
 - `default`
 - `pill`
 - `outline`
+- `link`
 
 <Canvas of={BoButtonStories.Types} />
 
