--- a/src/components/bo_icon_button/__storybook__/bo_icon_button.mdx
+++ b/src/components/bo_icon_button/__storybook__/bo_icon_button.mdx
@@ -23,11 +23,11 @@ An icon only button is a control that allows the user to perform an action.
 - `size` - The size of the icon (optional)
   - default: `BoSize.default`
 - `variant` - The variant of the icon (optional)
-  - default: `BoIconButtonVariant.primary`
+  - default: `BoVariant.primary`
 - `shape` - The shape of the icon (optional)
   - default: `BoIconButtonShape.default`
 - `style` - The style of the icon (optional)
-  - default: `BoIconButtonStyle.default`
+  - default: `BoIconButtonType.default`
 - `disabled` - Whether the button is disabled (optional)
   - default: `false`
 - `isLoading` - Whether the button is loading (optional)
@@ -50,7 +50,7 @@ The `size` prop can be used to change the size of the icon. The `size` prop shou
 
 ## Variants
 
-To change the color of the component, you can use the predifened `BoIconButtonVariant` enum. The `BoIconButtonVariant` enum includes the following variants:
+To change the color of the component, you can use the predifened `BoVariant` enum. The `BoVariant` enum includes the following variants:
 
 - `primary`
 - `secondary`
@@ -60,14 +60,6 @@ To change the color of the component, you can use the predifened `BoIconButtonVa
 - `dark`
 - `purple`
 - `teal`
-- `link`
-- `link_secondary`
-- `link_danger`
-- `link_warning`
-- `link_success`
-- `link_dark`
-- `link_purple`
-- `link_teal`
 
 <Canvas of={BoIconButtonStories.Variants} />
 
@@ -81,14 +73,15 @@ The `shape` prop can be used to change the shape of the icon. The `shape` prop s
 
 <Canvas of={BoIconButtonStories.Shapes} />
 
-## Styles
+## Types
 
-The `style` prop can be used to change the style of the icon. The `style` prop should be a member of the `BoIconButtonStyle` enum.
+The `type` prop can be used to change the type of the icon. The `type` prop should be a member of the `BoIconButtonType` enum.
 
 - `default`
 - `outline`
+- `link`
 
-<Canvas of={BoIconButtonStories.Styles} />
+<Canvas of={BoIconButtonStories.Types} />
 
 ## Disabled
 
@@ -101,9 +94,3 @@ The `disabled` prop can be used to disable the button. When the button is disabl
 The `isLoading` prop can be used to show a loading spinner. When the spinner is shown, the button will be disabled and will not respond to user interactions.
 
 <Canvas of={BoIconButtonStories.IsLoading} />
-
-## Links
-
-The `link` variants can be used to create clickable icons without the background color.
-
-<Canvas of={BoIconButtonStories.Links} />
