--- a/src/components/bo_spinner/__stories__/bo_spinner.mdx
+++ b/src/components/bo_spinner/__stories__/bo_spinner.mdx
@@ -21,7 +21,7 @@ A spinner is a graphical representation of an object or action that is being pro
 - `size` - The size of the spinner (optional)
   - default: `BoSize.default`
 - `variant` - The variant of the spinner (optional)
-  - default: `BoSpinnerVariant.primary`
+  - default: `BoVariant.primary`
 - `loaderText` - The text to be displayed in the loader (optional)
   - default: `''`
 
@@ -42,7 +42,7 @@ The `size` prop can be used to change the size of the spinner. The `size` prop s
 
 ## Variants
 
-To change the color of the component, you can use the predifened `BoSpinnerVariant` enum. The `BoSpinnerVariant` enum includes the following variants:
+To change the color of the component, you can use the predifened `BoVariant` enum. The `BoVariant` enum includes the following variants:
 
 - `primary`
 - `secondary`
