major refactor and config extension

--- a/src/components/bo_badge/__stories__/bo_badge.mdx
+++ b/src/components/bo_badge/__stories__/bo_badge.mdx
@@ -56,6 +56,7 @@ To change the color of the component, you can use the predifened `BoVariant` enu
 - `warning`
 - `success`
 - `dark`
+- `light`
 - `purple`
 - `teal`
 
