--- a/src/components/bo_text/__stories__/bo_text.mdx
+++ b/src/components/bo_text/__stories__/bo_text.mdx
@@ -34,10 +34,11 @@ A label is a small piece of text that is used to display information.
 
 The `size` prop can be used to change the size of the text. The `size` prop should be a member of the `BoFontSize` enum.
 
-- `overline`
-- `caption`
+- `extra-small`
+- `small`
 - `default`
 - `body`
+- `title`
 - `h6`
 - `h5`
 - `h4`
@@ -54,6 +55,32 @@ The `weight` prop can be used to change the weight of the text. The `weight` pro
 - `light`
 - `regular`
 - `medium`
+- `semibold`
 - `bold`
 
 <Canvas of={BoTextStories.Weights} />
+
+## Font family
+
+The `fontFamily` prop can be used to change the font family of the text. The `fontFamily` prop should be a member of the `BoFontFamily` enum.
+
+- `inter`
+- `graphik`
+- `sans`
+- `mono`
+- `serif`
+
+<Canvas of={BoTextStories.FontFamilies} />
+
+# White space
+
+The `whiteSpace` prop can be used to change the white space of the text. The `whiteSpace` prop should be a member of the `BoTextWhiteSpace` enum.
+
+- `normal`
+- `nowrap`
+- `pre`
+- `pre-line`
+- `pre-wrap`
+- `break-spaces`
+
+<Canvas of={BoTextStories.WhiteSpace} />
