feat: new components added and other project refactore related changes

--- a/src/components/bo_icon/__stories__/bo_icon.mdx
+++ b/src/components/bo_icon/__stories__/bo_icon.mdx
@@ -34,9 +34,11 @@ An icon is a graphical representation of an object or action. The `bo-icon` comp
 
 The `size` prop can be used to change the size of the icon. The `size` prop should be a member of the `BoSize` enum.
 
-- `small`
-- `default`
-- `large`
+- `extra_small - 8px`
+- `small - 12px`
+- `default - 16px (default)`
+- `large - 18px`
+- `extra_large - 24px`
 
 <Canvas of={BoIconStories.Sizes} />
 
