feat: button component added | project restructure and loader updates

--- a/src/components/bo_loading_pulse/__stories__/bo_loading_pulse.mdx
+++ b/src/components/bo_loading_pulse/__stories__/bo_loading_pulse.mdx
@@ -70,3 +70,15 @@ The `customColor` prop should be a string that represents the color in `hex` for
 The `loaderText` prop can be used to display a text in the spinner.
 
 <Canvas of={BoLoadingPulseStories.WithLoaderText} />
+
+## Text position
+
+The `textPosition` prop can be used to change the position of the text in the spinner.
+The `textPosition` prop should be a string that represents the position of the text in the spinner
+
+The available values for the `textPosition` prop are:
+
+- `side`
+- `bottom`
+
+<Canvas of={BoLoadingPulseStories.TextPosition} />
