--- a/src/components/bo_input/__stories__/bo_input.mdx
+++ b/src/components/bo_input/__stories__/bo_input.mdx
@@ -58,6 +58,18 @@ The component to use is called `bo-input`.
 <Canvas of={BoInputStories.Example} />
 <Controls of={BoInputStories.Example} />
 
+## Disabled
+
+The `disabled` prop can be used to disable the input. When the input is disabled, it will not respond to user interactions and will appear in a disabled state.
+
+<Canvas of={BoInputStories.Disabled} />
+
+## Readonly
+
+The `readonly` prop can be used to make the input readonly. When the input is readonly, the user will not be able to modify the value of the input.
+
+<Canvas of={BoInputStories.Readonly} />
+
 ## Sizes
 
 The `size` prop can be used to change the size of the input. The `size` prop should be a member of the `BoInputSize` enum.
