chore: modal and other component updates

--- a/src/components/bo_text/__stories__/bo_text.mdx
+++ b/src/components/bo_text/__stories__/bo_text.mdx
@@ -43,6 +43,7 @@ The `size` prop can be used to change the size of the text. The `size` prop shou
 - `small`
 - `default`
 - `body`
+- `modal-title`
 - `title`
 - `h6`
 - `h5`
