chore: doc update

--- a/src/components/bo_input/__stories__/bo_input.mdx
+++ b/src/components/bo_input/__stories__/bo_input.mdx
@@ -16,8 +16,8 @@ The component to use is called `bo-input`.
 
 ```html
 <bo-input
-	:model-value="modelValue"
 	:label="label"
+	v-model="modelValue"
 	:description="description"
 />
 ```
