refactor: utils and component updates

--- a/src/components/bo_text/__stories__/bo_text.mdx
+++ b/src/components/bo_text/__stories__/bo_text.mdx
@@ -39,11 +39,11 @@ A label is a small piece of text that is used to display information.
 
 The `size` prop can be used to change the size of the text. The `size` prop should be a member of the `BoFontSize` enum.
 
-- `extra-small`
+- `extra_small`
 - `small`
 - `default`
 - `body`
-- `modal-title`
+- `modal_title`
 - `title`
 - `h6`
 - `h5`
