--- a/src/components/bo_text/__stories__/bo_text.mdx
+++ b/src/components/bo_text/__stories__/bo_text.mdx
@@ -39,18 +39,17 @@ A label is a small piece of text that is used to display information.
 
 The `size` prop can be used to change the size of the text. The `size` prop should be a member of the `BoFontSize` enum.
 
-- `extra_small`
-- `small`
-- `default`
-- `body`
-- `modal_title`
-- `title`
-- `h6`
-- `h5`
-- `h4`
-- `h3`
-- `h2`
-- `h1`
+- `bo-xs`
+- `bo-sm`
+- `bo-base`
+- `bo-lg`
+- `bo-xl`
+- `bo-2xl`
+- `bo-3xl`
+- `bo-4xl`
+- `bo-5xl`
+- `bo-6xl`
+- `bo-7xl`
 
 <Canvas of={BoTextStories.Sizes} />
 
