chore: pre-commit update

--- a/src/utils/__stories__/keyboard_utils.mdx
+++ b/src/utils/__stories__/keyboard_utils.mdx
@@ -1,5 +1,5 @@
-import { Meta, Story } from '@storybook/blocks'
-import { KeyboardUtils } from '@/utils'
+import { Meta, Story } from '@storybook/blocks';
+import { KeyboardUtils } from '@/utils';
 
 <Meta title="Utils/KeyboardUtils" />
 
@@ -26,11 +26,8 @@ The `trapTabKey` method is used to trap the tab key within an element with the s
 - Returns: `void`
 
 ```html
-<div
-  id="my-element"
-  @keydown="KeyboardUtils.trapTabKey($event, 'my-element')"
->
-  <!-- Tab key will be trapped in this element -->
+<div id="my-element" @keydown="KeyboardUtils.trapTabKey($event, 'my-element')">
+	<!-- Tab key will be trapped in this element -->
 </div>
 ```
 
@@ -51,10 +48,7 @@ without the need to implement the required checks manually.
 - Returns: `void`
 
 ```html
-<div
-  id="my-element"
-  @keydown="KeyboardUtils.registerEnterKeyHandler($event, myHandler)"
->
-  <!-- Enter key will call the handler function when pressed -->
+<div id="my-element" @keydown="KeyboardUtils.registerEnterKeyHandler($event, myHandler)">
+	<!-- Enter key will call the handler function when pressed -->
 </div>
 ```
