--- a/src/utils/__stories__/keyboard_utils.mdx
+++ b/src/utils/__stories__/keyboard_utils.mdx
@@ -26,7 +26,10 @@ The `trapTabKey` method is used to trap the tab key within an element with the s
 - Returns: `void`
 
 ```html
-<div id="my-element" @keydown="KeyboardUtils.trapTabKey($event, 'my-element')">
+<div
+	id="my-element"
+	@keydown="KeyboardUtils.trapTabKey($event, 'my-element')"
+>
 	<!-- Tab key will be trapped in this element -->
 </div>
 ```
@@ -48,7 +51,10 @@ without the need to implement the required checks manually.
 - Returns: `void`
 
 ```html
-<div id="my-element" @keydown="KeyboardUtils.registerEnterKeyHandler($event, myHandler)">
+<div
+	id="my-element"
+	@keydown="KeyboardUtils.registerEnterKeyHandler($event, myHandler)"
+>
 	<!-- Enter key will call the handler function when pressed -->
 </div>
 ```
